force-app/main/default/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <description>Created by JW
Business Unit: BLDG
Description: Tracks logs of security activity such as Daily Action Reports and Incident Reports.</description>
    <label>Log</label>
    <nameField>
        <displayFormat>{MM}/{DD}/{YY}-{000}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>