force-app/main/default/objects/Log__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Created by JW
Business Unit: BLDG
Description: Tracks the date that this log took place.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date</label>
    <type>Date</type>
</CustomField>