force-app/main/default/objects/Log__c/fields/Description_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Incident__c</fullName>
    <description>Created by JW
Business Unit: BLDG
Description: Description of the incident in an incident report.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What happened in this incident? Who was involved or affected? Be as accurate and detailed as possible.</inlineHelpText>
    <label>Description of Incident</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>