force-app/main/default/objects/Log__c/fields/Follow_Up_Needed__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by JW
Business Unit: BLDG
Description: Denotes whether a follow-up is needed for this incident.</description>
    <inlineHelpText>Is a follow-up about this incident needed?</inlineHelpText>
    <label>Follow-Up Needed?</label>
    <type>Checkbox</type>
</CustomField>