force-app/main/default/objects/Log__c/fields/Incident_Case_Num__c.field-meta.xml
<CustomField>
    <fullName>Incident_Case_Num__c</fullName>
    <description>Created by JW
Business Unit: BLDG
Description: Tracks the law enforcement case # for this incident.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the law enforcement case number for this incident?</inlineHelpText>
    <label>Incident/Case #</label>
    <length>70</length>
    <type>Text</type>
</CustomField>