force-app/main/default/objects/Log__c/fields/Location_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Incident__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Created by JW
Business Unit: BLDG
Description: Tracks where the incident occured.</description>
    <inlineHelpText>Where did the incident occur?</inlineHelpText>
    <label>Location of Incident</label>
    <referenceTo>Space__c</referenceTo>
    <relationshipLabel>Incident Reports</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>