force-app/main/default/objects/Log__c/fields/Name_of_Reporting_Officer__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Reporting_Officer__c</fullName>
    <description>Created by JW
Business Unit: BLDG
Description: Tracks the name of the police officer who responded to the incident.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the name of the officer who responded to the incident?</inlineHelpText>
    <label>Name of Reporting Officer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>