force-app/main/default/objects/Log__c/fields/Shift_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Shift_End_Time__c</fullName>
    <description>Created by JW
Business Unit: BLDG
Description: Tracks when the user&apos;s shift ends.</description>
    <inlineHelpText>When does this shift end?</inlineHelpText>
    <label>Shift End Time</label>
    <type>Time</type>
</CustomField>