force-app/main/default/objects/Log__c/fields/Shift_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Shift_Start_Time__c</fullName>
    <description>Created by JW
Business Unit: BLDG
Description: Tracks when the user&apos;s shift started.</description>
    <inlineHelpText>What time did your shift start for the day?</inlineHelpText>
    <label>Shift Start Time</label>
    <type>Time</type>
</CustomField>