force-app/main/default/objects/Log__c/fields/Time_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Incident__c</fullName>
    <description>Created by JW
Business Unit: BLDG
Description: Tracks the exact time that the incident occurred.</description>
    <inlineHelpText>When did the incident occur?</inlineHelpText>
    <label>Time of Incident</label>
    <type>Time</type>
</CustomField>