force-app/main/default/objects/Log__c/recordTypes/Daily_Action_Report.recordType-meta.xml
<RecordType>
    <fullName>Daily_Action_Report</fullName>
    <active>true</active>
    <label>Daily Action Report</label>
</RecordType>