force-app/main/default/objects/Log__c/recordTypes/Incident_Report.recordType-meta.xml
<RecordType>
    <fullName>Incident_Report</fullName>
    <active>true</active>
    <label>Incident Report</label>
</RecordType>