force-app/main/default/objects/Log__c/listViews/All_DARs.listView-meta.xml
<ListView>
    <fullName>All_DARs</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Date__c</columns>
    <columns>Shift_Start_Time__c</columns>
    <columns>Shift_End_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Log__c.Daily_Action_Report</value>
    </filters>
    <label>All DARs</label>
</ListView>