force-app/main/default/objects/Log__c/listViews/All_Incident_Reports.listView-meta.xml
<ListView>
    <fullName>All_Incident_Reports</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Location_of_Incident__c</columns>
    <columns>Date__c</columns>
    <columns>Time_of_Incident__c</columns>
    <columns>Follow_Up_Needed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Log__c.Incident_Report</value>
    </filters>
    <label>All Incident Reports</label>
</ListView>